--- a/style.css
+++ b/style.css
@@ -141,6 +141,10 @@ footer {
   text-align: center;
 }
 
+#contact-elements {
+  margin: var(--spacing-1);
+}
+
 section {
   padding: var(--spacing-3) 0;
 }
