Add nav fixation

--- a/style.css
+++ b/style.css
@@ -46,6 +46,7 @@ nav {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;  
+  position: fixed;
 }
 
 .navigation-items {
